added alembic
- up jvm opts, fix uberjar name